Generating words from bigram model

--- a/build_makemore_yay.ipynb
+++ b/build_makemore_yay.ipynb
@@ -104,8 +104,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "c8a7a484-d3ce-46e2-bc9c-ed54cd192447",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_normalised_bigrams(bigrams):\n",
+    "    P = bigrams.float()\n",
+    "    return P / P.sum(1, keepdim=True)\n",
+    "\n",
+    "def generate_from_bigrams(P, generator):\n",
+    "    cs = []\n",
+    "    \n",
+    "    i = torch.multinomial(P[0], num_samples=1, replacement=True, generator=generator).item()\n",
+    "    \n",
+    "    while i != 0:\n",
+    "        c = index_to_char(i)\n",
+    "        cs.append(c)\n",
+    "        \n",
+    "        i = torch.multinomial(P[i], num_samples=1, replacement=True, generator=generator).item()\n",
+    "        \n",
+    "    return ''.join(cs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f2120b15-2fec-4beb-aee0-3530cd4d1848",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mor\n",
+      "axx\n",
+      "minaymoryles\n",
+      "kondlaisah\n",
+      "anchshizarie\n",
+      "odaren\n",
+      "iaddash\n",
+      "h\n",
+      "jhinatien\n",
+      "egushl\n",
+      "h\n",
+      "br\n",
+      "a\n",
+      "jayn\n",
+      "ilemannariaenien\n",
+      "be\n",
+      "f\n",
+      "akiinela\n",
+      "trttanakeroruceyaaxatona\n",
+      "lamoynayrkiedengin\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = get_normalised_bigrams(bigrams)\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for _ in range(20):\n",
+    "    name = generate_from_bigrams(P, g)\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1638543-aa2e-4f8b-82b3-c4f2602df564",
    "metadata": {},
    "outputs": [],
    "source": []
