Playing around with negative log likelihood

--- a/build_makemore_yay.ipynb
+++ b/build_makemore_yay.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "id": "c8a7a484-d3ce-46e2-bc9c-ed54cd192447",
    "metadata": {
     "tags": []
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "def get_normalised_bigrams(bigrams):\n",
-    "    P = bigrams.float()\n",
+    "    P = (bigrams+1).float()\n",
     "    return P / P.sum(1, keepdim=True)\n",
     "\n",
     "def generate_from_bigrams(P, generator):\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "f2120b15-2fec-4beb-aee0-3530cd4d1848",
    "metadata": {
     "tags": []
@@ -175,8 +175,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "b1638543-aa2e-4f8b-82b3-c4f2602df564",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-559951.5625)\n",
+      "2.4543561935424805\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_likelihood = 0.0\n",
+    "n = 0\n",
+    "\n",
+    "for w in names:\n",
+    "    cs = [TOKEN_SPECIAL] + list(w) + [TOKEN_SPECIAL]\n",
+    "    for c1, c2 in zip(cs, cs[1:]):\n",
+    "        i1 = char_to_index(c1)\n",
+    "        i2 = char_to_index(c2)\n",
+    "        prob = P[i1, i2]\n",
+    "        logprob = torch.log(prob)\n",
+    "        log_likelihood += logprob\n",
+    "        n += 1\n",
+    "        \n",
+    "print(f'{log_likelihood=}')\n",
+    "print(f'{-log_likelihood/n}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb85133-ce38-4f27-9948-20bb0b0adca4",
    "metadata": {},
    "outputs": [],
    "source": []
