Gradient descent, generating words from NN model
Definitely coming to understand how the key step here is figuring out
how to reframe a problem in a NN-based way:

- how do we frame the input as a float-valued tensor?  (e.g. one-hot
  encoding of input characters)
- how do we use differentiable operations to compute a loss function on
  the output?  (e.g. negative log-likelihood, mean-squared error, L2
  norm, etc.)

Some questions I have at this point:

- how do you pick a useful learning rate?  (trial-and-error?  some
  kind of parameter space search on the learning rate itself?)
- how do you decide when to stop gradient descent?  (i.e. how do you
  identify the point of diminishing returns?  loss function delta
  between iterations?)

Also there are open questions about different NN architectures, but it
sounds like those are about to be answered in upcoming videos :)

--- a/build_makemore_yay.ipynb
+++ b/build_makemore_yay.ipynb
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "def get_normalised_bigrams(bigrams):\n",
-    "    P = (bigrams+1).float()\n",
+    "    P = bigrams.float()\n",
     "    return P / P.sum(1, keepdim=True)\n",
     "\n",
     "def generate_from_bigrams(P, generator):\n",
@@ -210,8 +210,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "4eb85133-ce38-4f27-9948-20bb0b0adca4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_bigram_training_set(words):\n",
+    "    inputs = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for w in words:\n",
+    "        cs = [TOKEN_SPECIAL] + list(w) + [TOKEN_SPECIAL]\n",
+    "        for c1, c2 in zip(cs, cs[1:]):\n",
+    "            i1 = char_to_index(c1)\n",
+    "            i2 = char_to_index(c2)\n",
+    "            inputs.append(i1)\n",
+    "            targets.append(i2)\n",
+    "            \n",
+    "    inputs = torch.tensor(inputs)\n",
+    "    targets = torch.tensor(targets)\n",
+    "    num = inputs.nelement()\n",
+    "    print('number of examples: ', num)\n",
+    "    \n",
+    "    return inputs, targets, num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "66cb79ea-841c-4550-875d-1fafae16c887",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of examples:  228146\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "inputs, targets, num = get_bigram_training_set(names)\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn([27, 27], generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "9e3e9dbc-1b9b-468a-86aa-ece72b0fe540",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3.7686\n",
+      "1 3.3788\n",
+      "2 3.1611\n",
+      "3 3.0272\n",
+      "4 2.9345\n",
+      "5 2.8672\n",
+      "6 2.8167\n",
+      "7 2.7771\n",
+      "8 2.7453\n",
+      "9 2.7188\n",
+      "10 2.6965\n",
+      "11 2.6774\n",
+      "12 2.6608\n",
+      "13 2.6464\n",
+      "14 2.6337\n",
+      "15 2.6225\n",
+      "16 2.6125\n",
+      "17 2.6037\n",
+      "18 2.5958\n",
+      "19 2.5887\n",
+      "20 2.5823\n",
+      "21 2.5764\n",
+      "22 2.5711\n",
+      "23 2.5663\n",
+      "24 2.5618\n",
+      "25 2.5577\n",
+      "26 2.5539\n",
+      "27 2.5504\n",
+      "28 2.5472\n",
+      "29 2.5442\n",
+      "30 2.5414\n",
+      "31 2.5387\n",
+      "32 2.5363\n",
+      "33 2.5340\n",
+      "34 2.5318\n",
+      "35 2.5298\n",
+      "36 2.5279\n",
+      "37 2.5261\n",
+      "38 2.5244\n",
+      "39 2.5228\n",
+      "40 2.5213\n",
+      "41 2.5198\n",
+      "42 2.5185\n",
+      "43 2.5172\n",
+      "44 2.5160\n",
+      "45 2.5148\n",
+      "46 2.5137\n",
+      "47 2.5127\n",
+      "48 2.5117\n",
+      "49 2.5108\n",
+      "50 2.5099\n",
+      "51 2.5090\n",
+      "52 2.5082\n",
+      "53 2.5074\n",
+      "54 2.5066\n",
+      "55 2.5059\n",
+      "56 2.5052\n",
+      "57 2.5045\n",
+      "58 2.5039\n",
+      "59 2.5033\n",
+      "60 2.5027\n",
+      "61 2.5021\n",
+      "62 2.5016\n",
+      "63 2.5011\n",
+      "64 2.5006\n",
+      "65 2.5001\n",
+      "66 2.4996\n",
+      "67 2.4992\n",
+      "68 2.4987\n",
+      "69 2.4983\n",
+      "70 2.4979\n",
+      "71 2.4975\n",
+      "72 2.4971\n",
+      "73 2.4967\n",
+      "74 2.4964\n",
+      "75 2.4960\n",
+      "76 2.4957\n",
+      "77 2.4954\n",
+      "78 2.4950\n",
+      "79 2.4947\n",
+      "80 2.4944\n",
+      "81 2.4941\n",
+      "82 2.4939\n",
+      "83 2.4936\n",
+      "84 2.4933\n",
+      "85 2.4931\n",
+      "86 2.4928\n",
+      "87 2.4926\n",
+      "88 2.4923\n",
+      "89 2.4921\n",
+      "90 2.4919\n",
+      "91 2.4917\n",
+      "92 2.4915\n",
+      "93 2.4913\n",
+      "94 2.4911\n",
+      "95 2.4909\n",
+      "96 2.4907\n",
+      "97 2.4905\n",
+      "98 2.4903\n",
+      "99 2.4901\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradient descent\n",
+    "learning_rate = 50\n",
+    "iters = 100\n",
+    "\n",
+    "for k in range(iters):\n",
+    "    # forward pass\n",
+    "    inputs_enc = F.one_hot(inputs, num_classes=27).float()\n",
+    "    logits = inputs_enc @ W\n",
+    "    counts = logits.exp()\n",
+    "    P = counts / counts.sum(1, keepdim=True)\n",
+    "\n",
+    "    # calculate loss\n",
+    "    loss = -P[torch.arange(num), targets].log().mean() + 0.01*(W**2).mean()\n",
+    "    print(f'{k} {loss:.4f}')\n",
+    "    \n",
+    "    # backward pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # update\n",
+    "    W.data += -learning_rate * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "63b761c5-0de6-48d8-9be3-4d4b3cf8a80b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mor.\n",
+      "axx.\n",
+      "minaymoryles.\n",
+      "kondmaisah.\n",
+      "anchthizarie.\n",
+      "odaren.\n",
+      "iaddash.\n",
+      "h.\n",
+      "jionatien.\n",
+      "egwver.\n",
+      "ga.\n",
+      "t.\n",
+      "a.\n",
+      "jayn.\n",
+      "ilemannariaenien.\n",
+      "ad.\n",
+      "f.\n",
+      "akiinela.\n",
+      "trttanakerorudayaaxetona.\n",
+      "lamoyonuuriedengin.\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "for _ in range(20):\n",
+    "    out = []\n",
+    "    i = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        xenc = F.one_hot(torch.tensor([i]), num_classes=27).float()\n",
+    "        logits = xenc @ W\n",
+    "        counts = logits.exp()\n",
+    "        p = counts / counts.sum(1, keepdim=True)\n",
+    "\n",
+    "        i = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(index_to_char(i))\n",
+    "        if i == 0:\n",
+    "            break\n",
+    "    \n",
+    "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f75fe15a-6c2a-48a6-9943-9d338bdad6c6",
    "metadata": {},
    "outputs": [],
    "source": []
